[tool.poetry]
name = "pengoon"
version = "0.1.0"
description = "Another multi-pourpose discord bot...."
authors = ["Vaibhav Dhiman <anonymouscyborg@tuta.io>"]
license = "GNU AFFERO GENERAL PUBLIC LICENCE Version 3"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
nextcord = "^2.0.0-alpha.8"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

