[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Vaibhav Dhiman <anonymouscyborg@tuta.io>"]
description = "Another multi-pourpose discord bot...."
license = "GNU AFFERO GENERAL PUBLIC LICENCE Version 3"
name = "pengoon"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.3"
nextcord = "^2.0.0-alpha.8"
nose2 = "^0.11.0"
python = "^3.8"
requests = "^2.27.1"
unittest = "^0.0"
Brainshop = "^0.0.5"
mkdocs = "^1.3.0"
[tool.poetry.dev-dependencies]
