[tool.poetry]
name = "ball"
version = "0.1.0"
description = "A powerful multipurpose discord bot."
authors = ["Vaibhav Dhiman <mousemoosz@protonmail.com>"]
license = "GNU Affero General Public License Version 3"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.0.0-alpha.10"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
aiodns = "^3.0.0"
cchardet = "^2.1.7"
mkdocs = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
